tests/toylang/neg/001682_mutation.toylang
program a = { while if a do sleep; } .
